--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ There has never been an effective and unbiased method to measure the relationshi
                     }
                 });
             };
-            $('#filterinput').on('change', function() {
+            $('#filterinput').keyup(function() {
                 // the id of the filtered list
                 var list = '#list';
                 // the searched value
