--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@
 </head>
 
 <body>
-    <h3>Knowledge Base, Version 1.03</h3>
+    <h3>Vodafone</h3>
     <input class="filterinput" type="text" id="filterinput">
     <!--Paste Code Below This Line -->
     <ul id='list' class='collapsibleList'>
-        <li class='titles'>Promotions
+        <li class='titles'>Richiesta dati
             <ul>
-                <li class='titles'>Weekly
+                <li class='titles'>Richiesta Numero per contatto 
                     <ul>
-                        <li class='titles pitem'>Buy 2 Get 1
-                            <div class='item'>Have you heard of our Buy 2, Get 1 promotion, valid this week?</div>
+                        <li class='titles pitem'>siamo disponibili per verificare insieme: indicaci il tuo numero mobile per il contatto. Grazie
+                            <div class='item'>siamo disponibili per verificare insieme: indicaci il tuo numero mobile per il contatto. Grazie</div>
                         </li>
-                        <li class='titles pitem'>Free Shipping
-                            <div class='item'>We have a Free Shipping offer until Sunday, code ABCD</div>
+                        <li class='titles pitem'>siamo disponibili per verificare insieme: inviaci uno speedtest fatto con cavo ethernet, il codice fiscale dell'intestatario della linea, il tuo numero di rete fissa e un numero mobile per eventuali contatti. Grazie
+                            <div class='item'>siamo disponibili per verificare insieme: inviaci uno speedtest fatto con cavo ethernet, il codice fiscale dell'intestatario della linea, il tuo numero di rete fissa e un numero mobile per eventuali contatti. Grazie</div>
                         </li>
                     </ul>
                 </li>
-                <li class='titles'>Monthly
+                <li class='titles'>06-Richiesta dati mancanti - Rete fissa/Speedtest
                     <ul>
-                        <li class='titles pitem'>Promo Code
+                        <li class='titles pitem'>siamo disponibili per verificare insieme: indicaci il tuo numero mobile per il contatto. Grazie
                             <div class='item'>Until the end of the month, you get a free $10 credit to your next purchase, code: FREE10</div>
                         </li>
                     </ul>
                 </li>
-                <li class='titles'>Social
+                <li class='titles'>07-Richiesta dati mancanti - Richieste senza dettagli (solo in privato)
                     <ul>
                         <li class='titles pitem'>Facebook
                             <div class='item'>Like us on <a href="https://www.facebook.com/LivePersonInc/" target="_blank">Facebook</a>, and get 5% off your next order</div>
@@ -65,7 +65,7 @@
                 </li>
             </ul>
         </li>
-        <li class='titles'>Products
+        <li class='titles'>Chiusura
             <ul>
                 <li class='titles'>Hot Phones
                     <ul>
@@ -76,7 +76,7 @@
                 </li>
             </ul>
         </li>
-        <li class='titles'>T&C
+        <li class='titles'>Ricontatto
             <ul>
                 <li class='titles pitem'>Short Version
                     <div class='item'>Please review our policies <a href="http://www.liveperson.com/" target="_blank">here.</a></div>
@@ -105,7 +105,7 @@ There has never been an effective and unbiased method to measure the relationshi
             </ul>
         </li>
     </ul>
-    <p>AGENT: To Suggest Content, please click <a href="http://goo.gl/forms/COhQCJxzhE" target="_blank">here</a></p>
+    <p>Seleziona la risposta cliccando <a href="" target="_blank">qui</a></p>
     <!--Paste Code Above This Line -->
     <script>
         
