--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ There has never been an effective and unbiased method to measure the relationshi
             </ul>
         </li>
     </ul>
-    <p>Seleziona la risposta cliccando <a href="" target="_blank">qui</a></p>
+    <p>Seleziona la risposta cliccando <a href="/" target="_blank">qui</a></p>
     <!--Paste Code Above This Line -->
     <script>
         
