--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <input class="filterinput" type="text" id="filterinput">
     <!--Paste Code Below This Line -->
     <ul id='list' class='collapsibleList'>
-        <li class='titles'>Richiesta dati
+        <li class='titles'>Data request
             <ul>
                 <li class='titles'>Richiesta Numero per contatto 
                     <ul>
@@ -65,7 +65,7 @@
                 </li>
             </ul>
         </li>
-        <li class='titles'>Chiusura
+        <li class='titles'>Best Offers
             <ul>
                 <li class='titles'>Hot Phones
                     <ul>
@@ -76,7 +76,7 @@
                 </li>
             </ul>
         </li>
-        <li class='titles'>Ricontatto
+        <li class='titles'>Policies
             <ul>
                 <li class='titles pitem'>Short Version
                     <div class='item'>Please review our policies <a href="http://www.liveperson.com/" target="_blank">here.</a></div>
