--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <li class='titles'>Policies
             <ul>
                 <li class='titles pitem'>Short Version
-                    <div class='item'>Please review our policies <a href="http://www.liveperson.com/" target="_blank">here.</a></div>
+                    <div class='item'>Please review our policies <a href="https://www.liveperson.com/">here.</a></div>
                 </li>
                 <li class='titles pitem'>Long Version
                     <div class='item'>
