--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </li>
                 <li class='titles pitem'>Long Version
                     <div class='item'>
-There has never been an effective and unbiased method to measure the relationship between brands and consumers. Until now... Today's current metrics: net promoter score (NPS), customer satisfaction (CSAT), and customer effort score (CES), all rely on customer surveys. But these methods have many issues. Surveys disrupt the customer journey. This means, those who actually take the time to respond are usually your happiest customers, which skews your results. Using a select group to represent an entire customer pool also leads to grossly inaccurate information, since respondents opinions might be inconsistent with the broader population. But all that's changed.</div>
+There has never been an effective and unbiased method to measure the relationship between brands and consumers. Until now... Today's current metrics and policies: net promoter score (NPS), customer satisfaction (CSAT), and customer effort score (CES), all rely on customer surveys. But these methods have many issues. Surveys disrupt the customer journey. This means, those who actually take the time to respond are usually your happiest customers, which skews your results. Using a select group to represent an entire customer pool also leads to grossly inaccurate information, since respondents opinions might be inconsistent with the broader population. But all that's changed.</div>
                 </li>
             </ul>
         </li>
